# OOP1

./: .gitignore  README.md
lab1/: CMakeLists.txt  Frac.cpp  Frac.h
lab10/: Kanapa.h  Lozko.h  Mebel.h  Sofa.h
lab11/: Dir.h
lab12/: atest.cpp
lab13/: Executor.h  atest.cpp
lab14/: atest.cpp  num.h
lab15/: Matrix.h  atest.cpp
lab2/: CMakeLists.txt  WordAccess.cpp  WordAccess.h
lab4/: CMakeLists.txt  SmartPointer.cpp  SmartPointer.h  TestClassA.cpp  TestClassA.h  stest.cpp
lab5/: CMakeLists.txt  FElementarne.cpp  FElementarne.h  FZlozona.cpp  FZlozona.h  Fun.h  Rozniczka.cpp  Rozniczka.h  Trygonometryczne.cpp  Trygonometryczne.h  ftest.cpp
lab6/: Algo.h  Argumenty.cpp  Argumenty.h  Pierwiastek.cpp  Pierwiastek.h  Suma.cpp  Suma.h
lab8/: Cennik.h  atest.cpp
lab9/: Dir.h  File.h
